Closed
Bug 330126
Opened 20 years ago
Closed 20 years ago
Pages aren't marked as typed (autocomplete omits URLs)
Categories
(Firefox :: Bookmarks & History, defect, P1)
Firefox
Bookmarks & History
Tracking
()
RESOLVED
FIXED
Firefox 2 alpha2
People
(Reporter: jruderman, Assigned: brettw)
References
Details
(Keywords: fixed1.8.1, regression)
Attachments
(1 file)
|
3.91 KB,
patch
|
annie.sullivan
:
review+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20060310 Firefox/1.6a1
Steps to reproduce:
1. Cmd+L.
2. Type "del."
Expected: http://del.icio.us/jesser at the top
Result: uselesss stuff near the top; http://del.icio.us/jesser doesn't appear at all.
Comment 1•20 years ago
|
||
I can't make planet.mozilla.org appear in location autocomplete, linux trunk 2006-03-10-15Z
OS: MacOS X → All
Hardware: Macintosh → All
Comment 2•20 years ago
|
||
Also seeing on: Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.9a1) Gecko/20060312 Firefox/1.6a1 ID:2006031205
Updated•20 years ago
|
Flags: blocking-firefox2?
Updated•20 years ago
|
Assignee: nobody → brettw
Priority: -- → P1
Target Milestone: --- → Firefox 2 alpha1
Comment 3•20 years ago
|
||
I see this with my years-old profile on nightly trunk builds, f.e.:
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060314 Firefox/1.6a1
A number of items refuse to show up in autocomplete, including salon.com and slashdot.org, which I regularly enter manually. I'm tempted to say that *no* manually-entered URLs ever get into the autocomplete list, but I can't verify that. It's not just manually-entered URLs, however, f.e. if I go to slashdot and then click on a story URL, that URL won't appear either.
Comment 4•20 years ago
|
||
I started seeing this problem in my Linux 1.8 branch build starting late afternoon CST on 3/8. The build I did late afternoon on 3/7 (that I am still using now) still works.
This may be a duplicate of this bug:
https://bugzilla.mozilla.org/show_bug.cgi?id=329663
Comment 5•20 years ago
|
||
*** Bug 329663 has been marked as a duplicate of this bug. ***
Comment 6•20 years ago
|
||
My initial (albeit brief) testing of the patch in bug 320181 suggests that this will be fixed by that. In a normal trunk, web pages from a certain domain do not show up in autocomplete, in a build with that patch applied they do.
| Assignee | ||
Comment 7•20 years ago
|
||
(In reply to comment #6)
> My initial (albeit brief) testing of the patch in bug 320181 suggests that this
> will be fixed by that. In a normal trunk, web pages from a certain domain do
> not show up in autocomplete, in a build with that patch applied they do.
Yes, that patch should fix a number of autocomplete bugs.
| Assignee | ||
Comment 8•20 years ago
|
||
(In reply to comment #6)
> My initial (albeit brief) testing of the patch in bug 320181 suggests that this
> will be fixed by that. In a normal trunk, web pages from a certain domain do
> not show up in autocomplete, in a build with that patch applied they do.
Thanks for testing it, too. Does it make autocomplete fast enough on your machine? Do you have any feeling about whether it's faster or slower than 1.5? I think the first time you type a first letter you haven't typed before it will be slower, but after that it is hopefully faster.
Comment 9•20 years ago
|
||
(In reply to comment #8)
> Thanks for testing it, too. Does it make autocomplete fast enough on your
> machine? Do you have any feeling about whether it's faster or slower than 1.5?
> I think the first time you type a first letter you haven't typed before it will
> be slower, but after that it is hopefully faster.
I've put some initial comments into the newsgroup thread about it.
Comment 10•20 years ago
|
||
*** Bug 331063 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 11•20 years ago
|
||
This bug should be fixed by the patch to bug 320181, which will go in after the tree has unfrozen due to the alpha.
| Assignee | ||
Comment 12•20 years ago
|
||
*** Bug 331144 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 13•20 years ago
|
||
Autocomplete was redone by bug 320181. This fixed many problems. Some of what is left is that marking pages as typed is currently broken. This makes the drop-down arrow next to the URL bar give stupid results, and makes the autocomplete results less accurate.
Status: NEW → ASSIGNED
Summary: Address bar autocomplete omits many URLs → Pages aren't marked as typed (autocomplete omits URLs)
Target Milestone: Firefox 2 alpha1 → Firefox 2 alpha2
| Assignee | ||
Comment 14•20 years ago
|
||
Attachment #215711 -
Flags: review?(annie.sullivan)
Updated•20 years ago
|
Attachment #215711 -
Flags: review?(annie.sullivan) → review+
| Reporter | ||
Comment 15•20 years ago
|
||
Brett, it would have been better to create a new bug report instead of morphing this one (which has 12 votes and is linked to by The Burning Edge).
| Assignee | ||
Comment 16•20 years ago
|
||
(In reply to comment #15)
> Brett, it would have been better to create a new bug report instead of morphing
> this one (which has 12 votes and is linked to by The Burning Edge).
I think this is the bug. Part of the problem is that people are describing several different things. Some of them are fixed by bug 320181. The rest are the problem I clarified this bug to. If you type a URL, it won't appear in the lists where you would expect because the typed flag is wrong. It doesn't appear in the "down arrow" list at all, which is "items missing from autocomplete". I actually created bug 331144 for the typed flag but then decided it was the same.
Comment 17•20 years ago
|
||
Brett, the down arrow is NOT autocomplete. It may use the same source (with a different filter/sort/whatever), but it's not AFAIK what any of the people on this bug are refering to.
| Assignee | ||
Comment 18•20 years ago
|
||
(In reply to comment #17)
> Brett, the down arrow is NOT autocomplete. It may use the same source (with a
> different filter/sort/whatever), but it's not AFAIK what any of the people on
> this bug are refering to.
Regular autocomplete is also broken by this bug.
Updated•20 years ago
|
Flags: blocking-firefox2? → blocking-firefox2+
| Assignee | ||
Comment 19•20 years ago
|
||
Fixed on trunk and branch.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•20 years ago
|
Keywords: fixed1.8.1
| Assignee | ||
Comment 20•20 years ago
|
||
*** Bug 331512 has been marked as a duplicate of this bug. ***
Comment 21•16 years ago
|
||
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".
In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body contains places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.
Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.
Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•