Bug 330126 r=annie.sullivan Pages aren't marked as typed.

Original committer: brettw%gmail.com
Original revision: 1.86
Original date: 2006/03/22 21:58:59